# driver

./: .gitignore  70-fingerprint.rules  AGENTS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  build.rs  cbindgen.toml
.github/workflows/: ci.yml  release.yml
compat/windows/: unistd.h
docs/: END_USER_GUIDE.md  TESTING.md
examples/: biometric_validation.rs  hw_continuous_scan_dump.rs  hw_enroll_merge_verify.rs  hw_smoke_test.rs
go/fingerprint/: fingerprint.go  fingerprint_test.go  go.mod  hardware_test.go
include/: fingerprint.h
scripts/: ci_check.ps1  ci_check.sh  package_dist.ps1  package_dist.sh  run_biometric_validation.sh  run_c_smoke.sh  setup.sh  setup_windows.ps1  windows_common.ps1
src/: biometric.rs  driver.rs  error.rs  image.rs  lib.rs  usb.rs
src/drivers/: digitalpersona.rs  mod.rs
tests/: hardware.rs  run_biometric_validation.ps1  run_biometric_validation.sh  run_c_smoke.ps1  run_c_smoke.sh  run_go_hardware_test.ps1  run_go_hardware_test.sh  run_hw_continuous_dump.ps1  run_hw_continuous_dump.sh  run_hw_enroll_merge_verify.ps1  run_hw_enroll_merge_verify.sh  test.c
